--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"start": "ts-node-esm index.ts"
 	},
 	"keywords": [],
@@ -12,6 +12,10 @@
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.11.10"
+	},
+	"dependencies": {
+		"ts-jest": "^29.1.2"
 	}
 }
