--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "jest",
-		"start": "ts-node-esm index.ts"
+		"start": "npx tsx index.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,7 +13,8 @@
 	"description": "",
 	"devDependencies": {
 		"@types/jest": "^29.5.12",
-		"@types/node": "^20.11.10"
+		"@types/node": "^20.11.10",
+		"tsx": "^4.7.1"
 	},
 	"dependencies": {
 		"ts-jest": "^29.1.2"
